* Converted t/01basic.t to Test::More and modernised it.
* Converted t/02weird.t to Test::More and modernised it.

Version 2.52:   ( Sun Jun 28 16:16:09 IDT 2009 )
------------------------------------------------

* Added more keys to Build.PL (author, etc.)
* Added resources and keywords to META.yml.
* Converted t/00load.t to Test-More.
* No longer chdir()-ing into "t" in t/00load.t
* Got rid of the "new Config::IniFiles" syntax in the tests.
- replaced with Config::IniFiles->new().
- see "Perl Best Practices", "Programming Perl", 3rd Edition

Version 2.51:   ( Mon Jun  8 12:38:50 IDT 2009 )
------------------------------------------------

* Fixed "#46721: $config->exists() does not pay attention to -nocase => 1"
- https://rt.cpan.org/Ticket/Display.html?id=46721

Version 2.50:   ( Sun May 31 14:54:14 IDT 2009 )
------------------------------------------------

* Fixed the POD for SetParameterEOT:
- https://rt.cpan.org/Ticket/Display.html?id=28375
* Added t/pod.t and t/pod-coverage.t and fixed the problems they pointed:
- Removed some trailing pod.
    - http://rt.cpan.org/Ticket/Display.html?id=46549
- Documented the ->OutputConfig() method.

Version 2.49:   ( Sat May  2 17:16:28 IDT 2009 )
------------------------------------------------

* Fixed bug https://rt.cpan.org/Public/Bug/Display.html?id=45209 :
- Makefile.PL lacked the empty "PL_FILES" directive.

* Fixed bug https://rt.cpan.org/Ticket/Display.html?id=45588 :
- Failure to read ini file contents from a scalar (via "IO::Scalar").
- added t/23scalar-ref.t

Version 2.48:   ( Tue Apr  7 15:24:55 IDT 2009 )
------------------------------------------------

* Fixed bug https://rt.cpan.org/Ticket/Display.html?id=30402 :
- Trailing comments at the end of the file are not written.
- added a test (t/22trailing-comment-lines.t ) and a test file.

* Reverted the fix to bug #34067 ( "Multiline values returned as array
references in tied hash interface"), as it could potentially break a lot